# pandoc-wasm

./: .eslintrc.cjs  .gitignore  .gitmodules  Dockerfile  LICENSE  Makefile  README.md  cabal.project  esbuild.ts  pack.mjs  package-lock.json  package.json  pandoc-wasm.cabal  tsconfig.json
.github/workflows/: deploy.yml  docker.yml
digest/: digest.cabal
digest/src/: Asterius
digest/src/Data/Digest/: Adler32.hs  CRC32.hs  CRC32C.hs
example/: package-lock.json  package.json
example/src/: index.html  index.js
src/: pandoc.ts  utils.ts
src/Pandoc/: Main.hs
src/Pandoc/Text/: Readers.hs  Writers.hs
src/app/: app.ts  formats.ts  index.html  worker.ts
yaml/: yaml.cabal
yaml/src/Data/: Yaml.hs
zlib/: zlib.cabal
zlib/src/Codec/Compression/: GZip.hs  Zlib.hs
zlib/src/Codec/Compression/Zlib/: Raw.hs
