cabal-version: 2.4
name: digest
version: 0.0.2.0
license: GPL-2.0-or-later
author: George Stagg <georgestagg@gmail.com>
description:  A shim for the digest Haskell library for running under Asterius.
              Uses the crc-32 and adler-32 JavaScript libraries, via Asterius's
              FFI, to re-implement the digest modules fuctionality.

library
  exposed-modules: Data.Digest.Adler32
                   Data.Digest.CRC32
                   Data.Digest.CRC32C
  ghc-options: -Wall -Wcompat
  hs-source-dirs: src
  other-modules: Asterius.Aeson,
                 Asterius.ByteString,
                 Asterius.Text,
                 Asterius.UTF8
  build-depends: base,
                 aeson,
                 bytestring,
                 text
  default-language: Haskell2010
